incorporated changes from Dirk Janik.
Sun Sep  5 17:53:05 2004  Tim Janik  <timj@gtk.org>

        * de.po: incorporated changes from Dirk Janik.

svn path=/trunk/; revision=2474

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep  5 17:53:05 2004  Tim Janik  <timj@gtk.org>
+
+	* de.po: incorporated changes from Dirk Janik.
+
 2004-09-05  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
