--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 Sun Sep  5 17:53:05 2004  Tim Janik  <timj@gtk.org>
 
 	* de.po: incorporated changes from Dirk Janik.
