added updates from Artem Popov <tfwo@mail.ru>.
Mon Sep  6 17:05:08 2004  Tim Janik  <timj@gtk.org>

        * ru.po: added updates from Artem Popov <tfwo@mail.ru>.

svn path=/trunk/; revision=2479

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Sep  6 17:05:08 2004  Tim Janik  <timj@gtk.org>
+
+	* ru.po: added updates from Artem Popov <tfwo@mail.ru>.
+
 2004-09-06  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
