Updated Czech translation.
2004-09-06  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

svn path=/trunk/; revision=2481

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 Mon Sep  6 17:05:08 2004  Tim Janik  <timj@gtk.org>
 
 	* ru.po: added updates from Artem Popov <tfwo@mail.ru>.
