--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  David Lodge <dave@cirt.net>
+                                                                                
+        * en_GB.po: Translation updated.
+                                                                                
 2004-09-06  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
