--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Tue Sep  7 01:19:24 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.c: don't store defaults for solo, mute and sync properties.
+
+	* bsesubsynth.c: throw out default values for unused proeprties.
+
 Mon Sep  6 09:13:05 2004  Tim Janik  <timj@gtk.org>
 
 	* bsebus.[hc]: implemented ::outputs property. provided logic in
