--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2004-09-06  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Translation updated.
