added esperanto translation by Artem Popov <tfwo@mail.ru>.
Wed Sep  8 10:55:17 2004  Tim Janik  <timj@gtk.org>

        * eo.po: added esperanto translation by Artem Popov <tfwo@mail.ru>.

svn path=/trunk/; revision=2492

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep  8 10:55:17 2004  Tim Janik  <timj@gtk.org>
+
+	* eo.po: added esperanto translation by Artem Popov <tfwo@mail.ru>.
+
 2004-09-08  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
