--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -31,6 +31,7 @@ translations can be obtained from the following pages.
 @uref{http://l10n-status.gnome.org/gnome-2.8/en_CA/extras/index.html,, en_CA},
 @uref{http://l10n-status.gnome.org/gnome-2.8/en_GB/extras/index.html,, en_GB},
 @uref{http://l10n-status.gnome.org/gnome-2.8/es/extras/index.html,, es},
+@uref{http://l10n-status.gnome.org/gnome-2.8/eo/extras/index.html,, eo},
 @uref{http://l10n-status.gnome.org/gnome-2.8/fr/extras/index.html,, fr},
 @uref{http://l10n-status.gnome.org/gnome-2.8/hr/extras/index.html,, hr},
 @uref{http://l10n-status.gnome.org/gnome-2.8/ja/extras/index.html,, ja},
