--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Wed Sep  8 16:52:32 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecxxutils.h: changed TEMPLATE_ERROR::invalid_type() and
+	TEMPLATE_ERROR::invalid_argument_type() to throw an error upon
+	instantiation and not parsing with g++-3.4.
+
 Wed Sep  8 15:38:01 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: use g_intern_printf() to reformat i18n strings which
