Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

svn path=/trunk/; revision=2504

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 Wed Sep  8 10:55:17 2004  Tim Janik  <timj@gtk.org>
 
 	* eo.po: added esperanto translation by Artem Popov <tfwo@mail.ru>.
