--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep  8 17:54:09 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tools/bsefextract.cc tools/bsefcompare.cc: Fixed a few compiler
+	warnings.
+
 Wed Sep  8 10:57:34 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: added esperanto (eo) to ALL_LINGUAS.
