--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-08 12:19-0400\n"
+"POT-Creation-Date: 2004-09-08 16:02-0400\n"
 "PO-Revision-Date: 2004-09-08 19:50-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
@@ -358,8 +358,7 @@ msgid "Input"
 msgstr "Input"
 
 #: beast-gtk/bstcanvassource.c:972 beast-gtk/bstsnetrouter.c:1082
-#: bse/bseamplifier.idl:65 plugins/artscompressor.idl:39
-#: plugins/artscompressor.idl:58
+#: bse/bseamplifier.idl:65
 msgid "Output"
 msgstr "Output"
 
@@ -2953,8 +2952,8 @@ msgstr ""
 "other control signals) or exponentially (to amplify audio signals). Finally, "
 "the master volume controls amplification of the resulting output signal."
 
-#: bse/bseamplifier.idl:45 plugins/bseadder.c:97 plugins/bsebalance.idl:36
-#: plugins/bsemult.c:60
+#: bse/bseamplifier.idl:45 plugins/artscompressor.idl:50 plugins/bseadder.c:97
+#: plugins/bsebalance.idl:36 plugins/bsemult.c:60
 msgid "Audio In1"
 msgstr "Audio In1"
 
@@ -2962,8 +2961,8 @@ msgstr "Audio In1"
 msgid "First audio input"
 msgstr "First audio input"
 
-#: bse/bseamplifier.idl:46 plugins/bseadder.c:99 plugins/bsebalance.idl:37
-#: plugins/bsemult.c:62
+#: bse/bseamplifier.idl:46 plugins/artscompressor.idl:51 plugins/bseadder.c:99
+#: plugins/bsebalance.idl:37 plugins/bsemult.c:62
 msgid "Audio In2"
 msgstr "Audio In2"
 
@@ -2988,10 +2987,10 @@ msgid "Second control input"
 msgstr "Second control input"
 
 #: bse/bseamplifier.idl:49 bse/bsebiquadfilter.c:192 bse/bsestandardosc.c:200
-#: bse/bsewaveosc.c:564 plugins/artscompressor.idl:33 plugins/bseadder.c:101
-#: plugins/bseatandistort.c:92 plugins/bseiirfilter.c:162
-#: plugins/bsemixer.c:109 plugins/bsemult.c:68 plugins/davbassfilter.idl:35
-#: plugins/davchorus.idl:32 plugins/davorgan.c:133 plugins/davsyndrum.c:122
+#: bse/bsewaveosc.c:564 plugins/bseadder.c:101 plugins/bseatandistort.c:92
+#: plugins/bseiirfilter.c:162 plugins/bsemixer.c:109 plugins/bsemult.c:68
+#: plugins/davbassfilter.idl:35 plugins/davchorus.idl:32
+#: plugins/davorgan.c:133 plugins/davsyndrum.c:122
 #: plugins/davxtalstrings.c:145 plugins/evaluator/bseevaluator.idl:33
 msgid "Audio Out"
 msgstr "Audio Out"
@@ -3212,10 +3211,9 @@ msgstr "Gain Modulation [%]"
 msgid "Strength of gain modulation"
 msgstr "Strength of gain modulation"
 
-#: bse/bsebiquadfilter.c:184 plugins/artscompressor.idl:32
-#: plugins/bseatandistort.c:90 plugins/bseiirfilter.c:160
-#: plugins/davbassfilter.idl:34 plugins/davchorus.idl:31
-#: plugins/evaluator/bseevaluator.idl:32
+#: bse/bsebiquadfilter.c:184 plugins/bseatandistort.c:90
+#: plugins/bseiirfilter.c:160 plugins/davbassfilter.idl:34
+#: plugins/davchorus.idl:31 plugins/evaluator/bseevaluator.idl:32
 msgid "Audio In"
 msgstr "Audio In"
 
@@ -3353,8 +3351,7 @@ msgstr "Internals"
 msgid "Master Output"
 msgstr "Master Output"
 
-#: bse/bsebus.c:859 bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
-#: plugins/freeverb/bsefreeverb.c:123
+#: bse/bsebus.c:859 bse/bsepcmoutput.c:128 plugins/freeverb/bsefreeverb.c:123
 msgid "Left Audio In"
 msgstr "Left Audio In"
 
@@ -3362,8 +3359,7 @@ msgstr "Left Audio In"
 msgid "Left channel input"
 msgstr "Left channel input"
 
-#: bse/bsebus.c:861 bse/bsepcmoutput.c:130 plugins/artscompressor.idl:50
-#: plugins/freeverb/bsefreeverb.c:124
+#: bse/bsebus.c:861 bse/bsepcmoutput.c:130 plugins/freeverb/bsefreeverb.c:124
 msgid "Right Audio In"
 msgstr "Right Audio In"
 
@@ -3371,8 +3367,7 @@ msgstr "Right Audio In"
 msgid "Right channel input"
 msgstr "Right channel input"
 
-#: bse/bsebus.c:863 bse/bsepcminput.c:128 plugins/artscompressor.idl:51
-#: plugins/freeverb/bsefreeverb.c:125
+#: bse/bsebus.c:863 bse/bsepcminput.c:128 plugins/freeverb/bsefreeverb.c:125
 msgid "Left Audio Out"
 msgstr "Left Audio Out"
 
@@ -3380,8 +3375,7 @@ msgstr "Left Audio Out"
 msgid "Left channel output"
 msgstr "Left channel output"
 
-#: bse/bsebus.c:865 bse/bsepcminput.c:130 plugins/artscompressor.idl:52
-#: plugins/freeverb/bsefreeverb.c:126
+#: bse/bsebus.c:865 bse/bsepcminput.c:130 plugins/freeverb/bsefreeverb.c:126
 msgid "Right Audio Out"
 msgstr "Right Audio Out"
 
@@ -3571,10 +3565,10 @@ msgid ""
 "ladspa.org/."
 msgstr ""
 "Search path of directories, separated by \"%s\", used to find LADSPA "
-"plugins. This path is searched in addition to the standard LADSPA "
-"location on this system. LADSPA is the Linux Audio Developer's Simple Plugin "
-"API. More informations about LADSPA plugins can be found at http://www."
-"ladspa.org/."
+"plugins. This path is searched in addition to the standard LADSPA location "
+"on this system. LADSPA is the Linux Audio Developer's Simple Plugin API. "
+"More informations about LADSPA plugins can be found at http://www.ladspa."
+"org/."
 
 #: bse/bsecore.idl:468
 msgid "Synthesis Settings"
@@ -4446,93 +4440,152 @@ msgstr "BSE Multi-Part Wave File"
 msgid "BSE Synthesis File"
 msgstr "BSE Synthesis File"
 
-#: plugins/artscompressor.idl:29 plugins/artscompressor.idl:46
-#: plugins/evaluator/bseevaluator.idl:27
+#: plugins/artscompressor.idl:28 plugins/evaluator/bseevaluator.idl:27
 msgid "GNU General Public License"
 msgstr "GNU General Public Licence"
 
-#: plugins/artscompressor.idl:30
+#: plugins/artscompressor.idl:29
 msgid "/Enhance/ArtsCompressor"
 msgstr "/Enhance/ArtsCompressor"
 
-#: plugins/artscompressor.idl:31
-msgid "ArtsCompressor compresses the sound."
-msgstr "ArtsCompressor compresses the sound."
+#: plugins/artscompressor.idl:30
+msgid ""
+"ArtsCompressor compresses the sound.\n"
+"\n"
+"Compression is a dynamic operation that consists of two parts:\n"
+"(1) the current input volume of the signal is detected\n"
+"(2) if it exceeds a given theshold, the volume of the output signal will be "
+"reduced\n"
+"\n"
+"The input volume detection has an attack and a release half-life time which "
+"can be specified - in milliseconds - with the corresponding properties. This "
+"envelope causes the compressor to adapt slowly to the actual input signal "
+"level.\n"
+"\n"
+"The ratio specifies how the volume of a signal should be reduced, if it "
+"exceeds the threshold. A compression ratio of 2:1 means for instance that if "
+"the input volume is 2 dB over the threshold, the output volume will be 1 dB "
+"over the threshold. Example (threshold = -10, ratio 2:1):\n"
+"input = -20 dB => output = -20 dB\n"
+"input = -10 dB => output = -10 dB\n"
+"input = 0 dB => output = -5 dB\n"
+"input = 10 dB => output = 0 dB\n"
+"input = 20 dB => output = 5 dB\n"
+"\n"
+"Compression is often thought off as an operation to make music \"sound louder"
+"\". To achieve this, the first step is to reduce the dynamic range like in "
+"the example above. As the loud parts of the music have been reduced in "
+"volume, we can now amplify everything, without risking distortion or "
+"clipping. This has the overall effect of the music sounding louder. In our "
+"example, an output amplification of 5 dB would be okay, if the input signal "
+"never exceeded 0 dB."
+msgstr ""
+"ArtsCompressor compresses the sound.\n"
+"\n"
+"Compression is a dynamic operation that consists of two parts:\n"
+"(1) the current input volume of the signal is detected\n"
+"(2) if it exceeds a given theshold, the volume of the output signal will be "
+"reduced\n"
+"\n"
+"The input volume detection has an attack and a release half-life time which "
+"can be specified, in milliseconds, with the corresponding properties. This "
+"envelope causes the compressor to adapt slowly to the actual input signal "
+"level.\n"
+"\n"
+"The ratio specifies how the volume of a signal should be reduced, if it "
+"exceeds the threshold. A compression ratio of 2:1 means for instance that if "
+"the input volume is 2 dB over the threshold, the output volume will be 1 dB "
+"over the threshold. Example (threshold = -10, ratio 2:1):\n"
+"input = -20 dB => output = -20 dB\n"
+"input = -10 dB => output = -10 dB\n"
+"input = 0 dB => output = -5 dB\n"
+"input = 10 dB => output = 0 dB\n"
+"input = 20 dB => output = 5 dB\n"
+"\n"
+"Compression is often thought of as an operation to make music \"sound louder"
+"\". To achieve this, the first step is to reduce the dynamic range like in "
+"the example above. As the loud parts of the music have been reduced in "
+"volume, everything can now be amplified, without risking distortion or "
+"clipping. This has the overall effect of the music sounding louder. In the above "
+"example, an output amplification of 5 dB would be okay, if the input signal "
+"never exceeded 0 dB."
 
-#: plugins/artscompressor.idl:32 plugins/davbassfilter.idl:34
-#: plugins/davchorus.idl:31 plugins/evaluator/bseevaluator.idl:32
-msgid "Audio input"
-msgstr "Audio input"
+#: plugins/artscompressor.idl:50
+msgid "Audio input 1"
+msgstr "Audio input 1"
 
-#: plugins/artscompressor.idl:33
-msgid "Compressed audio output"
-msgstr "Compressed audio output"
+#: plugins/artscompressor.idl:51
+msgid "Audio input 2"
+msgstr "Audio input 2"
 
-#: plugins/artscompressor.idl:34 plugins/artscompressor.idl:53
-#: plugins/davbassfilter.idl:36 plugins/davchorus.idl:33
-#: plugins/evaluator/bseevaluator.idl:34
+#: plugins/artscompressor.idl:52
+msgid "Audio Out1"
+msgstr "Audio Out1"
+
+#: plugins/artscompressor.idl:52
+msgid "Compressed audio output 1"
+msgstr "Compressed audio output 1"
+
+#: plugins/artscompressor.idl:53
+msgid "Audio Out2"
+msgstr "Audio Out2"
+
+#: plugins/artscompressor.idl:53
+msgid "Compressed audio output 2"
+msgstr "Compressed audio output 2"
+
+#: plugins/artscompressor.idl:55 plugins/davbassfilter.idl:36
+#: plugins/davchorus.idl:33 plugins/evaluator/bseevaluator.idl:34
 msgid "Parameters"
 msgstr "Parameters"
 
-#: plugins/artscompressor.idl:35 plugins/artscompressor.idl:54
+#: plugins/artscompressor.idl:56
 msgid "Attack [ms]"
 msgstr "Attack [ms]"
 
-#: plugins/artscompressor.idl:35 plugins/artscompressor.idl:54
+#: plugins/artscompressor.idl:56
 msgid "Set the attack time in milliseconds"
 msgstr "Set the attack time in milliseconds"
 
-#: plugins/artscompressor.idl:36 plugins/artscompressor.idl:55
+#: plugins/artscompressor.idl:57
 msgid "Release [ms]"
 msgstr "Release [ms]"
 
-#: plugins/artscompressor.idl:36 plugins/artscompressor.idl:55
+#: plugins/artscompressor.idl:57
 msgid "Set the release time in milliseconds"
 msgstr "Set the release time in milliseconds"
 
-#: plugins/artscompressor.idl:37 plugins/artscompressor.idl:56
-msgid "Threshold"
-msgstr "Threshold"
+#: plugins/artscompressor.idl:58
+msgid "Threshold [dB]"
+msgstr "Threshold [dB]"
 
-#: plugins/artscompressor.idl:37 plugins/artscompressor.idl:56
+#: plugins/artscompressor.idl:58
 msgid "Set the threshold"
 msgstr "Set the threshold"
 
-#: plugins/artscompressor.idl:38 plugins/artscompressor.idl:57
-msgid "Ratio"
-msgstr "Ratio"
+#: plugins/artscompressor.idl:59
+msgid "Ratio [x:1]"
+msgstr "Ratio [x:1]"
 
-#: plugins/artscompressor.idl:38 plugins/artscompressor.idl:57
-msgid "Set the compression ratio"
-msgstr "Set the compression ratio"
+#: plugins/artscompressor.idl:59
+msgid "Set the compression ratio to x:1"
+msgstr "Set the compression ratio to x:1"
 
-#: plugins/artscompressor.idl:39 plugins/artscompressor.idl:58
+#: plugins/artscompressor.idl:60
+msgid "Output [dB]"
+msgstr "Output [dB]"
+
+#: plugins/artscompressor.idl:60
 msgid "Set the output amplification"
 msgstr "Set the output amplification"
 
-#: plugins/artscompressor.idl:47
-msgid "/Enhance/ArtsStereoCompressor"
-msgstr "/Enhance/ArtsStereoCompressor"
+#: plugins/artscompressor.idl:61
+msgid "Auto Output"
+msgstr "Auto Output"
 
-#: plugins/artscompressor.idl:48
-msgid "ArtsStereoCompressor compresses the sound."
-msgstr "ArtsStereoCompressor compresses the sound."
-
-#: plugins/artscompressor.idl:49
-msgid "Left audio input"
-msgstr "Left audio input"
-
-#: plugins/artscompressor.idl:50
-msgid "Right audio input"
-msgstr "Right audio input"
-
-#: plugins/artscompressor.idl:51
-msgid "Compressed left audio output"
-msgstr "Compressed left audio output"
-
-#: plugins/artscompressor.idl:52
-msgid "Compressed right audio output"
-msgstr "Compressed right audio output"
+#: plugins/artscompressor.idl:61
+msgid "Adjust the output amplification automatically"
+msgstr "Adjust the output amplification automatically"
 
 #: plugins/bseadder.c:97 plugins/bsemult.c:60
 msgid "Audio Input 1"
@@ -4799,6 +4852,11 @@ msgstr ""
 "DavBassFilter is a low-pass resonant TB-303 style filter based on the VCF303 "
 "portions of gsyn v0.2. The filter algorithm is partly based on the one "
 "described in \"Musical Applications of Microprocessors\" by Hal Chamberlin."
+
+#: plugins/davbassfilter.idl:34 plugins/davchorus.idl:31
+#: plugins/evaluator/bseevaluator.idl:32
+msgid "Audio input"
+msgstr "Audio input"
 
 #: plugins/davbassfilter.idl:35
 msgid "Filtered audio output"
