--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-09-08  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British translation.
