--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Sep  9 01:43:52 2004  Tim Janik  <timj@gtk.org>
+
+	* bstrecords.idl:
+	* bstgconfig.h: removed unused tab-width config setting.
+
 Wed Sep  8 17:54:09 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bsefextract.cc tools/bsefcompare.cc: Fixed a few compiler
