--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
 Overview of Changes in BEAST/BSE 0.6.3:
 
-* New Effects:
+* New/improved Effects:
   BseContribSampleAndHold - a sample and hold module by Artem Popov
   BseSummation            - a replacement for multiple BseAdder effects
+  DavBassFilter           - added trigger input for use in instruments
+* Dialog size and resizing adaptions for 800x600 screens
 * Fixed error handling when users form cyclic connections
 
 Overview of Changes in BEAST/BSE 0.6.2:
