--- a/TODO
+++ b/TODO
@@ -174,6 +174,8 @@ DOCS:
 - what kind of texi macros should be used to markup manual page contents?
   could WRITING.3 have a set of default macros showing this? [alper]
 - allow commas in @refBlurb{}, respectively Info BLURB = ","; texts [alper]
+- plugin-devel: mention possibility of deriving from BassFilterProperties() for expensive
+  table etc. calculations
 
 MONITORING DIALOG:
 * Frame "Thread Info"
