--- a/docs/beast-index.texi
+++ b/docs/beast-index.texi
@@ -6,27 +6,47 @@
 @include texiutils.texi
 
 @unnumbered Documents
-
 @itemize
-@item @uref{beast-doc://faq,,           Frequently Asked Questions}
+@item @uref{beast-doc://beast-index,,   Index}
+@item @uref{beast-doc://faq,,           FAQ (Frequently Asked Questions)}
+@item @uref{beast-doc://release-notes,, Release Notes}
+@item @uref{beast-doc://release-news,,  NEWS File}
 @item @uref{beast-doc://quickstart,,    Quick Start Guide}
-@item @uref{beast-man://1/beast,,       BEAST Manual Page}
-@item @uref{beast-man://1/bsesh,,       BSE Scheme Shell Manual Page}
-@item @uref{beast-doc://release-notes,, BEAST Release Notes}
-@item @uref{beast-doc://release-news,,  BEAST NEWS File}
+@end itemize
+
+@unnumbered Commands
+@itemize
+@item @uref{beast-man://1/beast,,       BEAST - Bedevilled Audio System}
+@item @uref{beast-man://1/bsesh,,       BSESH - BSE Scheme Shell}
+@item @uref{beast-man://1/sfidl,,       SFIDL - SFI IDL Compiler}
+@end itemize
+
+@anchor{development}
+@unnumbered Development Documents
+@itemize
+@item @uref{beast-doc://plugin-devel,,  BSE Plugin Development}
+@item @uref{beast-doc://sfidl-manual,,  SFIDL - Manual}
+@item @uref{beast-doc://engine-mplan,,  DSP Synthesis Engine (Concepts)}
 @end itemize
 
 @unnumbered Reference
-
 @itemize
-@item @uref{beast-doc://objdoc,, 	 	 BSE Objects and Plugins}
-@item @uref{beast-man://3/bse-structs,, 	 BSE Structures}
-@item @uref{beast-man://3/bse-procs,,   	 BSE Procedures}
-@item @uref{beast-man://1/sfidl,,                IDL Compiler Manual Page}
-@item @uref{beast-man://3/sfi,,         	 Synthesis Fusion Kit Interface}
-@item @uref{beast-man://3/bse,,         	 Bedevilled Sound Engine}
-@item @uref{beast-man://3/beast-gxk,,   	 BEAST's Gtk+ Extension Kit}
-@item @uref{beast-doc://engine-mplan,,     	 Synthesis Engine (Development Concepts)}
+@item @uref{beast-doc://objdoc,,        BSE Objects and Plugins (Properties and Channels)}
+@item @uref{beast-man://3/bse-structs,, BSE Structures (public API)}
+@item @uref{beast-man://3/bse-procs,,   BSE Procedures (public API)}
+@item @uref{beast-man://3/bse,,         BSE - Bedevilled Sound Engine (internal API)}
+@item @uref{beast-man://3/sfi,,         SFI - Synthesis Fusion Kit Interface (API)}
+@item @uref{beast-man://3/beast-gxk,,   GXK - Gtk+ Extension Kit (API)}
+@end itemize
+
+@unnumbered Online Resources
+@itemize
+@item @uref{http://beast.gtk.org/,,                       BEAST Web Site}
+@item @uref{http://beast.gtk.org/browse-bse-files.html,,  Sound Archive}
+@item @uref{http://beast.gtk.org/wiki:HelpDesk,,          Help Desk}
+@item @uref{http://beast.gtk.org/wiki:FeatureRequests,,   Feature Requests}
+@item @uref{http://beast.gtk.org/wiki:BeastTodo,,         Community TODO}
+@item @uref{http://beast.gtk.org/links-synthesis.html,,   Synthesis Links}
 @end itemize
 
 @bye
