--- a/TODO
+++ b/TODO
@@ -162,6 +162,9 @@ TODO:
 - Time Counter: Measure,QuarterNote,SixteenthNote,3840ticks
 
 DOCS:
+- Provide an "Architecture Overview" that describes how SFI, SFIDL, GSL, BSE,
+  the engine, BSESH, Scheme, BSW, BEAST, GTK and GXK work together.
+  rough outline: http://mail.gnome.org/archives/beast/2003-October/msg00007.html
 - document choice<->enum conversion functions
 - add text about MIDI realtime synthesis via external MIDI devices to beast overview paper
 - rewrite bse-categories.txt as .texi and add to /Help menu
